resolve issue with ngx-scrollbar, just need to specify hard values for heights, for some reason % or any relative based values do not work when inside ngx-scrollbar

--- a/cchulo.App.PortfolioBlog/ClientApp/src/app/pages/components/home/home.component.scss
+++ b/cchulo.App.PortfolioBlog/ClientApp/src/app/pages/components/home/home.component.scss
@@ -4,7 +4,7 @@
     justify-content: space-between;
     align-items: center;
     margin: auto;
-    height: 60%;
+    height: 600px;
     width: 100%;
     
 }
